--- a/templates/a_wechat/chat_home.html
+++ b/templates/a_wechat/chat_home.html
@@ -89,7 +89,7 @@
                                         {% if profile.user.id in online_users %}
                                             bg-green-500  <!-- Green dot for online users -->
                                         {% else %}
-                                            bg-red-500  <!-- Red dot for offline users -->
+                                            bg-gray-500  <!-- Red dot for offline users -->
                                         {% endif %}
                                     "></span>
                                 </div>
